[package]
name = "bitcoin-core-ipc"
version = "0.1.0"
edition = "2021"
author = ["frankomosh197@gmail.com"]
description = "Rust library for Bitcoin Core IPC interfaces"
license = "MIT"
repository = "https://github.com/frankomosh/bitcoin-ipc-lib"
readme = "README.md"
keywords = ["bitcoin", "ipc", "rpc", "cryptocurrency"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[dependencies]
# Cap'n Proto dependencies
capnp = "0.16.0"
capnp-rpc = "0.16.0"

# Async runtime
tokio = { version = "1.28.0", features = ["full", "macros"] }
tokio-util = { version = "0.7.8", features = ["compat"] }
futures = "0.3.28"

# Bitcoin types
bitcoin = "0.30.0" 

# Error handling
thiserror = "1.0.40"

# Utilities
log = "0.4.17"
hex = "0.4.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

# Optional BDK integration
bdk = { version = "0.28.0", optional = true }
bdk-chain = { version = "0.4.0", optional = true }

[dev-dependencies]
env_logger = "0.10.0"

[build-dependencies]
capnpc = "0.16.3"

[features]
default = []
bdk = ["dep:bdk", "dep:bdk-chain"]

[[example]]
name = "simple_chain"
path = "examples/simple_chain.rs"

[[example]]
name = "wallet"
path = "examples/wallet.rs"
required-features = ["bdk"]